--- a/analysis/templates/analysis.html
+++ b/analysis/templates/analysis.html
@@ -23,7 +23,7 @@
     <header class="analysis-header">
       <i class="fas fa-chevron-left analysis-header-prev" onclick="setting_prev()"></i>
       <div class="analysis-header-title">Analysis</div>
-      <i class="fas fa-ellipsis-h analysis-header-setting" onclick="setting_open()"></i>
+      <i style="visibility:hidden;" class="fas fa-ellipsis-h analysis-header-setting" onclick="setting_open()"></i>
     </header>
 
     <div class="analysis-image">
