not understandable words

--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -88,6 +88,8 @@
       </div> 
     </div>
   </section>
+
+  <input type="hidden" name="csrftoken" value="hgdillksdbgjksdbkvbskb">
   <!-- partial -->
   <script src='https://use.fontawesome.com/releases/v5.0.13/js/all.js'></script>
   <script type="text/javascript" src="{% static 'Chatbot/chatroom/js/event.js' %}"></script>
